--- a/index.html
+++ b/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Weather Dashboard</title>
 </head>
+
 <body>
-    
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Weather Dashboard</h1>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                <div>
+                    <h2>Search for a City:</h2>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control userInput" aria-describedby="basic-addon1">
+                        <button class="btn btn-primary" id="searchButton"><i class="fas fa-search"></i></button>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary" id="clearButton">Clear Searches</button>
+                <div id="pastCities">
+                </div>
+            </div>
+            <div class="col-lg-9">
+                <div class="container">
+                    <div class="row">
+                        <h3 id="cityDisplay"></h3>
+                        <p id="temperatureDisplay"></p>
+                        <p id="humidityDisplay"></p>
+                        <p id="windSpeedDisplay"></p>
+                        <p id="uvIndexDisplay"></p>
+                    </div>
+                    <div id="five-day-forecast" class="row">
+                        <h4 id="forecast-header"></h4>
+                        <div class="forecast-display justify-content-center row"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 </html>
