--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div id="pastCities">
                 </div>
             </div>
-            <div class="col-lg-9">
+            <div class="col-9">
                 <div class="container">
                     <div class="row">
                         <h3 id="cityDisplay"></h3>
