--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-3">
                 <div>
@@ -27,28 +27,29 @@
                         <button class="btn btn-primary" id="searchButton"><i class="fas fa-search"></i></button>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary" id="clearButton">Clear Searches</button>
+                <button id="clearButton" class="btn btn-primary">Clear Searches</button>
                 <div id="pastCities">
                 </div>
             </div>
             <div class="col-9">
-                <div class="container">
-                    <div class="row">
+                <div class="container"></div>
+                    <div id="mainDisplay" class="row">
                         <h3 id="cityDisplay"></h3>
                         <p id="temperatureDisplay"></p>
-                        <p id="humidityDisplay"></p>
                         <p id="windSpeedDisplay"></p>
+                        <p id="humidityDisplay"></p>
                         <p id="uvIndexDisplay"></p>
                     </div>
-                    <div id="five-day-forecast" class="row">
-                        <h4 id="forecast-header"></h4>
-                        <div class="forecast-display justify-content-center row"></div>
+                    <div id="fiveDay" class="row">
+                        <h4 id="forecastHeader"></h4>
                     </div>
+                    <div class="forecastDisplay row"></div>
                 </div>
             </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="assets/script.js"></script>
 </body>
 </html>
