added commentary and wrote readme file
added commentary to HTML and Javascript
minor changes to script.js
wrote readme file

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <div class="container-fluid">
         <div class="row">
+            <!--section for search bar and search history-->
             <div class="col-3">
                 <div>
                     <h2>Search for a City:</h2>
@@ -31,20 +32,20 @@
                 <div id="pastCities">
                 </div>
             </div>
+            <!--section for current temperature, wind spped, humidity, UV index, and 5 day forecast-->
             <div class="col-9">
                 <div class="container"></div>
-                    <div id="mainDisplay" class="row">
-                        <h3 id="cityDisplay"></h3>
-                        <p id="temperatureDisplay"></p>
-                        <p id="windSpeedDisplay"></p>
-                        <p id="humidityDisplay"></p>
-                        <p id="uvIndexDisplay"></p>
-                    </div>
-                    <div id="fiveDay" class="row">
-                        <h4 id="forecastHeader"></h4>
-                    </div>
-                    <div class="forecastDisplay row"></div>
+                <div id="mainDisplay" class="row">
+                    <h3 id="cityDisplay"></h3>
+                    <p id="temperatureDisplay"></p>
+                    <p id="windSpeedDisplay"></p>
+                    <p id="humidityDisplay"></p>
+                    <p id="uvIndexDisplay"></p>
                 </div>
+                <div id="fiveDay" class="row">
+                    <h4 id="forecastHeader"></h4>
+                </div>
+                <div class="forecastDisplay row"></div>
             </div>
         </div>
     </div>
